Team member gap Issue

--- a/src/Components/TeamMember/TeamMember.css
+++ b/src/Components/TeamMember/TeamMember.css
@@ -77,7 +77,7 @@
 }
 .teamMember_area .swiper {
   width: 100%;
-  height: 420px !important;
+  height: 440px !important;
 }
 @media only screen and (max-width: 768px) {
   .teamMember_head h2 {
